--- a/labs/src/index.html
+++ b/labs/src/index.html
@@ -1,4 +1,13 @@
-<script src="index.js" defer></script>
-<div id="main"></div>
-<div id="elements"></div>
-<div id="elements2"></div>
+<!DOCTYPE html>
+    <html>
+
+    <head>
+    </head>
+
+    <body>
+        <script src="index.js" defer></script>
+        <div id="main"></div>
+        <div id="elements"></div>
+    </body>
+
+    </html>
