--- a/labs/src/person-card.html
+++ b/labs/src/person-card.html
@@ -1,25 +1,25 @@
 <section class="person-card">
   <header>
     <h1>
-      ${p.name.first} ${p.name.last}
+      ${this.p.name.first} ${this.p.name.last}
     </h1>
   </header>
   <div class="profile-image-div">
-    <img src="${p.picture.large}" alt="${p.name.first} ${p.name.last}" />
+    <img src="${this.p.picture.large}" alt="${this.p.name.first} ${this.p.name.last}" />
   </div>
   <div class="person-data">
     <ul>
       <li>
         <span class="label">Location</span>
-        <br />${p.location.street}
-        <br />${p.location.city}, ${p.location.state} ${p.location.postcode}
-        <br />${p.location.country}</li>
+        <br />${this.p.location.street}
+        <br />${this.p.location.city}, ${this.p.location.state} ${this.p.location.postcode}
+        <br />${this.p.location.country}</li>
       <li>
-        <span class="label">Email:</span> ${p.email}</li>
+        <span class="label">Email:</span> ${this.p.email}</li>
       <li>
-        <span class="label">Cell:</span> ${p.cell}</li>
+        <span class="label">Cell:</span> ${this.p.cell}</li>
       <li>
-        <span class="label">Gender:</span> ${p.gender}</li>
+        <span class="label">Gender:</span> ${this.p.gender}</li>
     </ul>
   </div>
   </header>
